Corrected read file for P1d

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -7,7 +7,7 @@
 <BODY LANG="en-US" DIR="LTR">
 
 
-<h2>JHPlot: a graphical front-end of DataMelt</h2>
+<h2>HPlot: a graphical front-end of DMelt</h2>
 
 
 For details, see <a href="http://jwork.org/dmelt">JHPlot API</a>
