--- a/src/html/hplot.html
+++ b/src/html/hplot.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=iso-8859-1">
-<TITLE>HPlot3D</TITLE>
+<TITLE>HPlot</TITLE>
 </HEAD>
 <BODY LANG="en-US" DIR="LTR">
 
@@ -25,7 +25,7 @@ Method (b):  Double-click with middle mouse button and drug the pointer.
 Navigate the mouse to the left, right, top, bottom margin and press the right mouse button. 
 
 
-<P><A HREF="http://www.desy.de/~chekanov">S.Chekanov (ANL)
+<P><A HREF="http://jwork.org/dmelt/">jWork.ORG DMelt
 </A>
 </BODY>
 </HTML>
