--- a/src/html/license.html
+++ b/src/html/license.html
@@ -1,5 +1,5 @@
 <html>
-Copyright (C) 2005-2013 S.Chekanov
+Copyright (C) 2005-2016. jWork.ORG and S.Chekanov
 
 <H2>
 jHPlot License Terms and Conditions
