Corrected H2D content errors

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -10,7 +10,7 @@
 <h2>HPlot: a graphical front-end of DMelt</h2>
 
 
-For details, see <a href="http://jwork.org/dmelt">JHPlot API</a>
+For details, see <a href="https://datamelt.org/">JHPlot API</a>
 <br>
 
 S.Chekanov
