--- a/src/html/license.html
+++ b/src/html/license.html
@@ -1,5 +1,5 @@
 <html>
-Copyright (C) 2005-2016. jWork.ORG and S.Chekanov
+Copyright (C) 2005-2020. DataMelt and S.Chekanov
 
 <H2>
 jHPlot License Terms and Conditions
@@ -51,7 +51,7 @@ under the following conditions:
 
 <UL>
 <LI> Attribution. You must attribute the work
-  i.e. by linking to <a href="http://jwork.org/dmelt">http://jwork.org/dmelt</a>
+  i.e. by linking to <a href="https://datamelt.org/">https://datamelt.org</a>
 
 <LI>Non-commercial. You may not use this work for commercial purposes
    Unless you have approval from DataMelt, please contact us at <a href="mailto:dmelt@jwork.org">dmelt@jwork.org</a>. 
